# metalgate-code

./: .gitignore  LICENSE  README.md  agent.py  pyproject.toml  run.sh  skills.py
.metalgate/: AGENTS.md  mcp.yaml  skills.py
benchmark/: backend.py  harbor_agent.py  skills.py
metalgate_code/: __init__.py
metalgate_code/config/: __init__.py  modes.py
metalgate_code/context/: .go_tracer.py  __init__.py  backend_context.py  cache.py  data.py  go_tracer.py  indexer.py  python_tracer.py  resolver.py  tools.py  tracer.py  tracer_base.py  ty_lsp_client.py
metalgate_code/context/db/: __init__.py  models.py  query.py  streaming_writer.py  writer.py
metalgate_code/context/parsing/: __init__.py  collector.py  core.py  jedi.py  module.py  treesitter.py
metalgate_code/factory/: __init__.py  acp_server.py  agent_factory.py  microsandbox_backend.py  venv_manager.py
metalgate_code/helpers/: __init__.py  paths.py
metalgate_code/memory/: __init__.py  config.py  paths.py  replayer.py  session_store.py  store.py
metalgate_code/middleware/: __init__.py  collector.py  dynamic_tools.py  python_context.py  recollector.py  tool_skills.py
metalgate_code/models/: __init__.py  anthropic.py  evroc.py  openai.py  provider.py
metalgate_code/skills/: __init__.py  meta_skills.py  registry.py  registry_mcp.py  skills_mcp.py
tests/: conftest.py  test_context.py  test_file_edit.py  test_go_context.py  test_go_context_monorepo.py  test_indexer.py  test_memory.py  test_model.py  test_python_context.py  test_sandbox.py  test_session.py  test_skills.py  test_storage.py  test_subagent_hitl_integration.py  test_venv_integration.py
tests/sample/: orders.py
tests/sample/go/: go.mod  orders.go  utils.go  validation.go
tests/sample/go/monorepo/: go.mod
tests/sample/go/monorepo/e2e-tests/suite/: test.go
tests/sample/go/monorepo/private/service/api/: controller.go
tests/sample/go/monorepo/private/service/internal/shared/: context.go
tests/sample/go/monorepo/public/client/: client.go
tests/sample/python/: pyproject.toml  utils.py  validation.py
tests/sample/python-no-manifest/: orders.py
tests/sample/python-pyproject/: orders.py  pyproject.toml
